--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -40,7 +40,7 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: wheels-${{ strategy.job-index }}
+        name: wheels-${{ matrix.os }}
         path: ./wheelhouse
 
 
@@ -83,6 +83,6 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: wheels-${{ strategy.job-index }}
+        name: wheels-${{ matrix.os }}
         path: ./wheelhouse
 
